# GANforCEPC

./: README.md
ApplyGan/: CMakeLists.txt  job.sh  sub.sh  submit
ApplyGan/src/apply/: SLCIORdr.cpp  SLCIORdr.h  main.cpp  read_SMIJK_ID_x_y_z.cpp
ApplyGan/src/check/: SLCIORdr.cpp  SLCIORdr.h  main.cpp
ApplyGan/src/utils/: my_utils.cpp  my_utils.h
GAN/Prepare_h5/: Local_comp_batch.sh  Local_comp_batch_sp.sh  check_RawHit.py  check_reco_v1.py  event_compare_args.py  event_display.py  makeLocalCompSh.py  merge_h5.py  root2hdf5.py  root2hdf5.sh  root2hdf5_v1.py
GAN/Prepare_h5/jos_for_root2hdf5/: make.py
GAN/Train/generator/: generator.py  generator_v1.py  generator_v2.py  generator_v3.py  generator_v4.py  generator_v5.py  generator_v6.py  generator_v7.py  generator_v7_EcalOnly.py
GAN/Train/job_sub/: README  Testing.sh  Testing_reco.sh  Training.sh  Training_reco.sh
GAN/Train/job_sub/jobs/: Template_Testing_em.sh  Template_Testing_gamma.sh  Template_Testing_pi-.sh  Template_Testing_reco_pi-.txt  Testing_em.sh  Testing_em_batch.sh  Testing_gamma.sh  Testing_gamma_batch.sh  Testing_pi-_batch.sh  Testing_reco_em.sh  Testing_reco_gamma.sh  Testing_reco_pi-_batch.sh  Training_em.sh  Training_gamma.sh  Training_pi-.sh  Training_pi-_fix.sh  Training_reco_em.sh  Training_reco_gamma.sh  Training_reco_pi-.sh  make_ganTestScript.py  make_recoTestScript.py
GAN/Train/job_sub/jobs/learn_pdf/: Training_gamma.sh  Training_gamma_sherpa.sh
GAN/Train/job_sub/jobs/learn_pdf/info_sherpa/: results.csv
GAN/Train/models/: StartNoteBook.bat  architectures.py  check_bp.py  convert.py  ops.py  particles.yaml  tmp.txt  train.py  train_lsgan_v0.py  train_lsgan_v0Ecal.py  train_lsgan_v0_fix.py  train_lsgan_v1_fix.py  train_lsgan_v1_fix_EcalOnly.py  train_lsgan_v2_fix_EcalOnly.py  train_v1.py  train_v2.py  train_v3.py  train_v4.py  train_v5.py  train_v6.py  train_v6_DEBUG.py_nouse  train_v7.py  train_v8.py
GAN/Train/models/LearnPDF/: learn_pdf.py  learn_pdf_sherpa.py  learn_pdf_v1.py
GAN/Train/reco/: reco_test.py  reco_test_v1.py  reco_test_v2.py  reco_test_v3.py  reco_test_v4.py  train.py  train_v1.py  train_v2.py  train_v3.py  train_v4.py  train_v5.py  train_var3.py
